--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,14 +1,28 @@
 server:
   port: 9090
+  servlet:
+    context-path: "/api/v1"
 
 spring:
+  data:
+    rest:
+      default-media-type: "application/json;charset=UTF-8"
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/lmsstore
     username: lms
     password: 12345678
   jpa:
-    hibernate.ddl-auto: update
-    properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+      ddl-auto: update
     generate-ddl: true
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
+logging:
+  level:
+    org:
+      hibernate:
+        stat: debug
