--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,4 +1,28 @@
 server:
-  port: 8888
+  port: 8080
+  servlet:
+    context-path: "/api/v1"
 
-message: Production mode is on
+spring:
+  data:
+    rest:
+      default-media-type: "application/json;charset=UTF-8"
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/lmsstore
+    username: lms
+    password: 12345678
+  jpa:
+    hibernate:
+      ddl-auto: update
+    generate-ddl: true
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
+logging:
+  level:
+    org:
+      hibernate:
+        stat: info
