--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,17 +12,13 @@ spring:
     url: jdbc:mysql://localhost:3306/lmsstore
     username: lms
     password: 12345678
+    initializationMode: always
   jpa:
-    hibernate:
-      ddl-auto: update
-    generate-ddl: true
+    hibernate.ddl-auto: validate
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+    properties.hibernate:
+      dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
-logging:
-  level:
-    org:
-      hibernate:
-        stat: debug
+logging.level.org.hibernate:
+  SQL: debug
+  type.descriptor.sql.BasicBinder: TRACE
