--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -12,17 +12,9 @@ spring:
     url: jdbc:mysql://localhost:3306/lmsstore
     username: lms
     password: 12345678
+    initializationMode: always
   jpa:
-    hibernate:
-      ddl-auto: update
-    generate-ddl: true
+    hibernate.ddl-auto: validate
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-
-logging:
-  level:
-    org:
-      hibernate:
-        stat: info
+    properties.hibernate:
+      dialect: org.hibernate.dialect.MySQL5InnoDBDialect
